--- a/Index.html
+++ b/Index.html
@@ -62,6 +62,28 @@
     <h1>📱 Tap-Tap-Hustle</h1>
     <h2>Satu HP. Empat Medsos. Bukti Nyata.</h2>
   </header>
+  <section id="lyrics" style="padding: 40px 20px; background-color: #f9f9f9;">
+  <h2 style="text-align: center;">🎶 Lirik Tap-Tap-Hustle</h2>
+  <div style="max-width: 600px; margin: auto; font-size: 1em; line-height: 1.6;">
+    <p>📱 Tap Tap Hustle<br>
+    Satu HP, empat medsos<br>
+    Silent hustle, bukti nyata</p>
+
+    <p>Bangun pagi, buka WhatsApp dulu<br>
+    Grup freelance rame, job numpuk mulu</p>
+
+    <p>Facebook scroll, cari grup cuan<br>
+    DM masuk, “Bang, bisa bantu desain?”</p>
+
+    <p>Instagram buka, story ku naik<br>
+    Caption: “Satu HP, tetap menarik”</p>
+
+    <p>Twitter aktif, thread ku viral<br>
+    “Cara dapet crypto tanpa modal”</p>
+
+    <!-- Add more verses here as needed -->
+  </div>
+</section>
 
   <div class="video-container">
     <iframe src="https://www.youtube.com/embed/CZDDqt3pHug?rel=0&showinfo=0" 
@@ -71,7 +93,7 @@
 
   <a class="lyrics-button" href="#lyrics">🎶 Lihat Lirik Lengkap</a>
 
-  <a class="lyrics-button" href="https://trakteer.id/YOUR_USERNAME" target="_blank">💸 Dukung di Trakteer</a>
+  <a class="lyrics-button" href="https://trakteer.id/mobilehustle/tip" target="_blank">💸 Dukung di Trakteer</a>
 
   <footer>
     © 2025 Alfian. Dibuat untuk kreator mobile yang bangkit diam-diam.
